# infrastructure/rest/controllers/auth/Auth.go
@@ -43,3 +43,29 @@ func (c *Controller) Login(ctx *gin.Context) {
 	}
 	ctx.JSON(http.StatusOK, authDataUser)
 }
+
+// GetAccessTokenByRefreshToken godoc
+// @Tags auth
+// @Summary GetAccessTokenByRefreshToken UserName
+// @Description Auth user by email and password
+// @Param data body AccessTokenRequest true "body data"
+// @Success 200 {object} useCaseAuth.DataUserAuthenticated
+// @Failure 400 {object} controllers.MessageResponse
+// @Failure 500 {object} controllers.MessageResponse
+// @Router /auth/access-token [post]
+func (c *Controller) GetAccessTokenByRefreshToken(ctx *gin.Context) {
+	var request AccessTokenRequest
+
+	if err := controllers.BindJSON(ctx, &request); err != nil {
+		appError := domainErrors.NewAppError(err, domainErrors.ValidationError)
+		_ = ctx.Error(appError)
+		return
+	}
+
+	authDataUser, err := c.AuthService.AccessTokenByRefreshToken(request.RefreshToken)
+	if err != nil {
+		_ = ctx.Error(err)
+		return
+	}
+	ctx.JSON(http.StatusOK, authDataUser)
+}
