# infrastructure/rest/controllers/auth/Structures.go
@@ -6,3 +6,8 @@ type LoginRequest struct {
 	Email    string `json:"email" example:"mail@mail.com" gorm:"unique" binding:"required"`
 	Password string `json:"password" example:"Password123" binding:"required"`
 }
+
+// AccessTokenRequest is a struct that contains the login request information
+type AccessTokenRequest struct {
+	RefreshToken string `json:"refreshToken" example:"badbunybabybebe" binding:"required"`
+}
